--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Review"></activity>
+        <activity android:name=".Login"></activity>
+        <activity android:name=".Review" />
         <activity android:name=".ModulesNewPage" />
         <activity android:name=".ModuleList" />
         <activity android:name=".MainActivity">
