Added a button on the Login page which on being pressed takes us to new activity "Contact Us"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StudentUpload"/>
+        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".StudentUpload" />
         <activity android:name=".SolutionsDownload" />
-        <activity android:name=".StudentSolutions"/>
+        <activity android:name=".StudentSolutions" />
         <activity android:name=".AlarmPage" />
         <activity android:name=".Reminders1" />
         <activity android:name=".WelcomeScreen">
