--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.studenthub">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectModules"></activity>
+        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".StudentUpload" />
+        <activity android:name=".SolutionsDownload" />
+        <activity android:name=".StudentSolutions" />
         <activity android:name=".AlarmPage" />
         <activity android:name=".Reminders1" />
         <activity android:name=".WelcomeScreen">
@@ -27,7 +35,7 @@
         <activity android:name=".ModuleList" />
         <activity android:name=".ModulesNewPage" />
         <activity android:name=".Review" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
