--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContactPage"></activity>
+        <activity android:name=".GradeAnalytics"></activity>
         <activity android:name=".StudentUpload" />
         <activity android:name=".SolutionsDownload" />
         <activity android:name=".StudentSolutions" />
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TeacherLogin" />
+        <activity android:name=".ModuleSelect" />
         <activity android:name=".Attendance" />
         <activity android:name=".SignIn" />
         <activity android:name=".Login" />
