Modified Solutions Page according to layout. Added a peer review page for new solutions uploaded by students. Still need some working on the Student Peer Review page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContactPage"></activity>
-        <activity android:name=".GradeAnalytics"></activity>
+        <activity android:name=".StudentPeerReview"></activity>
+        <activity android:name=".ContactPage" />
+        <activity android:name=".GradeAnalytics" />
         <activity android:name=".StudentUpload" />
         <activity android:name=".SolutionsDownload" />
         <activity android:name=".StudentSolutions" />
@@ -38,8 +39,6 @@
         <activity android:name=".ModulesNewPage" />
         <activity android:name=".Review" />
         <activity android:name=".MainActivity" />
-
-
     </application>
 
 </manifest>
